# 4-player-chess-jax

./: .gitignore  API_DESIGN.md  ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  MANIFEST.in  OPTIMIZATION_PLAN.md  OPTIMIZATION_RESULTS.md  QUICKSTART.md  README.md  TECHNICAL_DESIGN.md  analyze_diagonal.py  analyze_issue.md  debug_attack_detection.py  debug_is_move_legal.py  debug_knight_moves.py  debug_move_issue.py  debug_promotion_issue.py  debug_queen_move.py  debug_state.json  find_attacking_piece.py  king_capture_analysis.md  pyproject.toml  requirements.txt  test_attacker_positions.py  test_between_table.py  test_bishop_corner_bug.py  test_castling.py  test_deeper_analysis.py  test_fix.py  test_jit.py  test_jit_diagnostics.py  test_king_capture_bug.py  test_king_position_sync.py  test_promotion_fix.py  test_queen_moves.py  test_sliding_bug.py  visualize_board.py
examples/: interactive_play.py  parallel_rollout_demo.py  play_game.py
four_player_chess/: __init__.py  board.py  constants.py  coordinate_transforms.py  environment.py  pieces.py  precompute.py  rendering.py  rules.py  scoring.py  state.py  utils.py
tests/: __init__.py  test_column_9_pawn.py  test_coordinate_transforms.py  test_encode_action_jit.py  test_jit.py  test_pawn_discovered_check.py  test_pawn_movement_bug.py  test_relative_coords_integration.py  test_server_queen_validation.py
web_ui/: README.md  app.py  start.sh
web_ui/templates/: index.html
