[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "four-player-chess-jax"
version = "0.1.0"
description = "A JAX-native implementation of a 4-player chess environment for reinforcement learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Eric Yuxuan Ye", email = "ericyuxuanye@users.noreply.github.com"}
]
keywords = ["chess", "jax", "reinforcement-learning", "multi-agent", "game", "environment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "chex>=0.1.85",
    "numpy>=1.24.0",
    "gymnax>=0.0.6",
]

[project.optional-dependencies]
web = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "four-player-chess-jax[web,dev]",
]

[project.urls]
Homepage = "https://github.com/ericyuxuanye/four-player-chess-jax"
Repository = "https://github.com/ericyuxuanye/four-player-chess-jax"
Documentation = "https://github.com/ericyuxuanye/four-player-chess-jax#readme"
"Bug Tracker" = "https://github.com/ericyuxuanye/four-player-chess-jax/issues"

[tool.setuptools]
packages = ["four_player_chess"]

[tool.setuptools.package-data]
four_player_chess = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=four_player_chess",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "chex.*",
    "gymnax.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["four_player_chess"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
